--- a/IAC/initialise-iac.yml
+++ b/IAC/initialise-iac.yml
@@ -1,6 +1,7 @@
 parameters:
   poolimage: ""
-
-steps:
-    
-  - script: echo "Hello from YAML Templates in Azure DevOps Pipelines. the pool image is ${{ parameters.poolimage }}"
+jobs:
+  - job: Intializing
+    steps:
+        
+      - script: echo "Hello from YAML Templates in Azure DevOps Pipelines. the pool image is ${{ parameters.poolimage }}"
