--- a/IAC/azure-deploy.yml
+++ b/IAC/azure-deploy.yml
@@ -3,8 +3,15 @@ name: $(Build.BuildId)
 trigger:
   - master
 
+resources:
+  repositories:
+    - repository: Libraries
+      type: git
+      name: Libraries
+
+
 parameters:
-  - name: image
+  - name: image    
     displayName: Pool Image
     type: string
     default: ubuntu-latest
@@ -15,6 +22,8 @@ parameters:
       - ubuntu-16.04
       - macOS-latest
       - macOS-10.14
+
+
 stages:
   # Initialise stages
   - stage: FirstStage
