--- a/IAC/azure-deploy.yml
+++ b/IAC/azure-deploy.yml
@@ -7,7 +7,7 @@ resources:
   repositories:
     - repository: Libraries
       type: git
-      name: Libraries
+      name: YAMLPOCTemplates/Libraries
 
 
 parameters:
